apps/identity/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quizup-identity
  namespace: quizup-prod
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - identity.quizup.cnadjim.fr
      secretName: identity-quizup-cnadjim-fr-tls
  rules:
    - host: identity.quizup.cnadjim.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: quizup-identity
                port:
                  number: 80
